Docs: starting including swagger documentation
